MINOR: Cleanup simplify set initialization with Set.of